[gd_scene format=3]

[ext_resource type="Script" path="res://scripts/flow/screens/NodeResolveScreen.gd" id="1_script"]

[node name="NodeResolveScreen" type="PanelContainer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -220.0
offset_right = 320.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NodeTitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "노드"
horizontal_alignment = 1

[node name="NodeDescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "-"
horizontal_alignment = 1
autowrap_mode = 2

[node name="NodeChoices" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
